add cutw book imgs, fix link

--- a/_pages/books/chrysanthemum-under-the-waves.html
+++ b/_pages/books/chrysanthemum-under-the-waves.html
@@ -13,9 +13,25 @@ pages: 284 pgs, 6 in x 9 in
 materials: softcover, smythsewn
 images:
   - path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-01.jpg
-    alt: chrysanthemums on the left, woman and a man embracing on the right
+    alt: female and male figures in a dark room, in front of a fireplace, with chrysanthemums on the mantel
   - path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-02.jpg
-    alt: a man staring, man holding a woman as she falls apart, a woman gazing at a dress, a clock nearing 10am
+    alt: a woman turned away, putting chrysanthemums into a vase on a fireplace in front of a painting of chrysanthemums
+  - path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-03.jpg
+    alt: a woman and a man talking at a party in the bathroom
+  - path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-04.jpg
+    alt: female and male figure arguing in a dark room
+  - path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-05.jpg
+    alt: "boat and text reads: BUT THE SAILS WERE O THE TAFFETI, AND THE MASTS WERE O BEATEN GOLD"
+  - path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-06.jpg
+    alt: "a man's face with black circular eyes, woman embracing a man, a woman holding a dress, a clock"
+  - path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-07.jpg
+    alt: landscape with clouds
+  - path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-08.jpg
+    alt: a woman and man kissing in a dark room
+  - path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-09.jpg
+    alt: a dentist office front desk, a dental chair, a woman getting dental x-rays
+  - path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-10.jpg
+    alt: back cover, Chrysanthemum Under the Waves
 trailer:
   path: /assets/videos/maggie-umber-the-tooth-animation.mp4
   type: video/mp4
@@ -35,7 +51,7 @@ blurbs:
   - i think the style rine is in makes the elements of the house feel organic like its a shipwreck w urn corals & chandelier anemones growing & i love that <br />&mdash; lympho nodge
 events:
   - Debuts at CXC (Cartoon Crossroads Columbus), 2024
-  - '6/14-7/3/2024 <a href="https://www.annarborartcenter.org/drawing-worlds/">Drawing Worlds: The Art of Comics and Beyond</a>'
+  - '6/14-7/3/2024 <a href="https://www.annarborartcenter.org/drawing-worlds/" target="_blank">Drawing Worlds: The Art of Comics and Beyond</a>, A2AC Gallery, Ann Arbor, MI'
   - 4/2/2024 artist Zoom talk for Lale Westvind's Print Class at Parsons School of Design, New York, NY
   - "3/12/20 Now #8 Fantagraphics reading/signing with Amy Lockeart, Quimby&#39;s, Chicago, IL"
   - 10/1/16 reading/slide show presentation of The Shirley Jackson Project, Boneshaker Books, Minneapolis, MN
