add cutw trailer, fix cutw front info

--- a/_pages/books/chrysanthemum-under-the-waves.html
+++ b/_pages/books/chrysanthemum-under-the-waves.html
@@ -33,9 +33,9 @@ images:
   - path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-10.jpg
     alt: back cover, Chrysanthemum Under the Waves
 trailer:
-  path: /assets/videos/maggie-umber-the-tooth-animation.mp4
+  path: /assets/videos/maggie-umber-cutw-trailer.mp4
   type: video/mp4
-  credits: 'Credits: The Tooth by Maggie Umber. <br /> Music: <a href="https://incompetech.com/music/royalty-free/index.html?isrc=USUAN1100231" target="_blank">Fantastic Dim Bar</a> by Kevin MacLeod, <br /><a href="https://incompetech.com/music/royalty-free/index.html?isrc=USUAN1100578" target="_blank">Quinn&apos;s Song: A New Man</a> by Kevin MacLeod.'
+  credits: 'video and art by Maggie Umber'
 summaries:
   - Chrysanthemum Under the Waves is a book of mourning from Sound of Snow Falling author, Maggie Umber.
   - In the nine comics collected here, Umber grieves for the loss of her former self &ndash; a wife, a co-founder of a successful publishing company, and a person with good health living in a pre-pandemic world. Over the course of nearly 300 pages, she says goodbye to all she held most dear. In Chrysanthemum Under the Waves, Umber uses the demon lover theme, first as a way to hold on to her past, and finally, as a way to let it go.
