--- a/_posts/2024-07-16-cutw-production-sample.html
+++ b/_posts/2024-07-16-cutw-production-sample.html
@@ -16,11 +16,8 @@ singles:
 ---
 
 <p>
-  My production sample of <a href="/chrysanthemum-under-the-waves.html">Chrysanthemum Under the 
-    Waves</a> arrived! 
-</p>
-<p>
-  The full print run has been printed. Two copies arrived on my doorstep last week. 
+  The full print run of my new graphic novel, <a href="/chrysanthemum-under-the-waves.html">Chrysanthemum 
+    Under the Waves</a>, has been printed. Two sample copies arrived on my doorstep last week. 
   The rest will arrive a few weeks before their debut at 
   <a href="https://www.cartooncrossroadscolumbus.org/" target="_blank">CXC (Cartoon Crossroads Columbus)</a>
   in September.
