--- a/_pages/events.html
+++ b/_pages/events.html
@@ -4,6 +4,8 @@ permalink: /events
 ---
 
 <hr />
+<!-- <h2>2025: The Slow Burn Tour</h2> -->
+
 <h2>2024: The Less is More Zine Tour</h2>
 <ul>
   <li>☞ 4/27 <a href="https://madisonprintandresist.wordpress.com/" target="_blank">Madison Print & Resist Zine Fest</a>, Madison, WI</li>
