add new button across site, change toys to single page, add new toy

--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -1,12 +1,13 @@
 ---
 title: Blog
 permalink: /blog
+description: My book announcements and tour entries! Plus... you'll find my reviews of 
+  graphic novels, comic books and zines with a focus on small alternative press and 
+  self-published work. I only only review books that I love.
 ---
 
 <p>
-  My book announcements and tour entries! Plus...
-  you'll find my reviews of graphic novels, comic books and zines with a focus on 
-  small alternative press and self-published work. I only only review books that I love. 
+  {{ page.description }}
 </p>
 <p>Subscribe: <a href="https://maggieumber.com/feed.xml">RSS</a></p>
 <p>
