--- a/_pages/books.html
+++ b/_pages/books.html
@@ -2,17 +2,19 @@
 title: Books
 permalink: /books
 redirect_from: /pages/books.html
+description: Each of my zines is printed on demand using my Epson inkjet printer and folded 
+  and stapled by hand. My graphic novels are printed offset and perfect bound by various 
+  printers overseas.  Anthologies are edited, printed and sold by their respective publishers.
 ---
 
-<p>Each of my zines is printed on demand using my Epson inkjet printer and folded and stapled by hand. 
-  My graphic novels are printed offset and perfect bound by various printers overseas.  Anthologies 
-  are edited, printed and sold by their respective publishers.</p>
+<p>{{ page.description }}</p>
   <p>
     <a href="#zines">☞ Zines</a>
     <a href="#graphicnovels">☞ Graphic Novels</a>
     <a href="#anthologies">☞ Anthologies</a>
   </p>
 <hr />
+{% include view-cart.html %}
 
 <!-- zines -->
 <article id="zines">
