--- a/_pages/prints.html
+++ b/_pages/prints.html
@@ -2,12 +2,13 @@
 title: Prints
 permalink: /prints
 redirect_from: /pages/prints.html
+description: Choose from three print sizes (4x6, 5x7, and 8.5x11 inches) and a greeting card 
+  option. Prints are high-quality inkjet on glossy photo paper. They come with a matboard 
+  backing. Greeting cards are printed on cardstock and paired with an envelope. Prints and 
+  greeting cards are packaged in plastic sleeves.
 ---
 
-<p>Choose from three print sizes (4x6, 5x7, and 8.5x11 inches) and a greeting card option. Prints 
-  are high-quality inkjet on glossy photo paper. They come with a matboard backing. Greeting cards 
-  are printed on cardstock and paired with an envelope. Prints and greeting cards are packaged in 
-  plastic sleeves.</p>
+<p>{{ page.description }}</p>
   <p>
     <a href="#sosf-prints">☞ SOSF</a>
     <a href="#tc-prints">☞ Time Capsule</a>
@@ -18,6 +19,7 @@ redirect_from: /pages/prints.html
     <a href="#portrait-prints">☞ Portrait</a>
   </p>
 <hr />
+{% include view-cart.html %}
 
 <!-- sosf prints -->
 <article id="sosf-prints">
