add cutw splash page to index, remove catalogue

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -16,7 +16,7 @@ contacts:
     name: ☞ ig
   - link: https://maggieumber.com/feed.xml
     name: ☞ rss
-bio: "Maggie Umber paints, prints, and programs graphic novels and zines. She's published three graphic novels — Sound of Snow Falling, Time Capsule, and 270° — and her work has been widely anthologized."
+bio: "Maggie Umber paints, prints, and programs graphic novels and zines. She's published three graphic novels — Sound of Snow Falling, Time Capsule, and 270° — and her work has been widely anthologized. Her new graphic novel, Chrysanthemum Under the Waves, will be out in the fall of 2024."
 ---
 
 <p>{{ page.bio }}</p>
