--- a/_pages/wholesale.html
+++ b/_pages/wholesale.html
@@ -26,5 +26,5 @@ redirect_from: /pages/wholesale.html
 <div class="gallery">
   {% assign all_products = site.data.products.wholesale %} {% assign
   random_items = all_products | sample: 5 %} {% for item in random_items %} {%
-  include products.html %} {% endfor %}
+  include products-books.html %} {% endfor %}
 </div>
