--- a/_pages/books.html
+++ b/_pages/books.html
@@ -7,38 +7,13 @@ description: Each of my zines is printed on demand using my Epson inkjet printer
   printers overseas.  Anthologies are edited, printed and sold by their respective publishers.
 ---
 
-<p>{{ page.description }}</p>
-  <p>
-    <a href="#zines">☞ Zines</a>
-    <a href="#graphicnovels">☞ Graphic Novels</a>
-    <a href="#anthologies">☞ Anthologies</a>
-  </p>
-<hr />
-{% include view-cart.html %}
+{% include page-description.html %}
 
-<!-- zines -->
-<article id="zines">
-  <h1 class="h1-category-spacing">Zines</h1>
-  <div class="gallery">
-    {% for item in site.data.products.zines %} {% include products.html %} {%
+<div class="gallery">
+  {% for item in site.data.books.graphicnovels %} {% include products-books.html %} {%
     endfor %}
-  </div>
-</article>
-
-<!-- graphic novels -->
-<article id="graphicnovels">
-  <h1 class="h1-category-spacing">Graphic Novels</h1>
-  <div class="gallery">
-    {% for item in site.data.products.graphicnovels %} {% include products.html %} {%
+  {% for item in site.data.books.zines %} {% include products-books.html %} {%
     endfor %}
-  </div>
-</article>
-
-<!-- anthologies -->
-<article id="anthologies">
-  <h1 class="h1-category-spacing">Anthologies</h1>
-  <div class="gallery">
-    {% for item in site.data.anthologies %} {% include anthologies.html %} {%
+  {% for item in site.data.anthologies %} {% include anthologies.html %} {%
     endfor %}
-  </div>
-</article>
+</div>
