--- a/_pages/index.html
+++ b/_pages/index.html
@@ -37,7 +37,54 @@ doubles:
   <a href="/chrysanthemum-under-the-waves.html">Chrysanthemum Under the Waves</a> is a collection
   of nine comics. It's a book of mourning, a book of letting go, a book of love and loss.
 </p>
-{% include paypal.html %}
+<!-- cover image -->
+<div class="gallery">
+  <figure class="gallery-item">
+    <a href="/chrysanthemum-under-the-waves.html">
+      <img
+        class="thumbnail-600"
+        src="{{ page.cover.path }}"
+        alt="{{ page.cover.alt }}"
+        title="copyright Maggie Umber"
+      />
+    </a>
+    <figcaption>
+      <form
+        target="paypal"
+        action="https://www.paypal.com/cgi-bin/webscr"
+        method="post"
+      >
+        <p>
+          {{ page.price }} <br />
+          {{ page.pages }}<br />
+          {{ page.materials }}
+        </p>
+
+        <input type="hidden" name="cmd" value="_s-xclick" />
+        <input
+          type="hidden"
+          name="hosted_button_id"
+          value="{{ page.button_id }}"
+        />
+        <input
+          type="image"
+          src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif"
+          border="0"
+          name="submit"
+          alt="PayPal - The safer, easier way to pay online!"
+        />
+        <img
+          alt=""
+          border="0"
+          src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif"
+          width="1"
+          height="1"
+        />
+      </form>
+    </figcaption>
+  </figure>
+</div>
+
 
 <p>
   You can <a href="/chrysanthemum-under-the-waves.html">preorder</a> now. Advanced copies will be 
