--- a/_pages/toys.html
+++ b/_pages/toys.html
@@ -8,9 +8,7 @@ description: I crochet the toys with acrylic yarns, but wool and other materials
   <a href="/bunworld-1">Bunworld</a>. 
 ---
 
-<p>{{ page.description }}</p>
-<hr />
-{% include view-cart.html %}
+{% include page-description.html %}
 
 <div class="gallery">
   {% assign all_toys = site.data.toys.minibuns | concat:
