--- a/_pages/index.html
+++ b/_pages/index.html
@@ -1,6 +1,8 @@
 ---
 title: Maggie Umber
 permalink: /
+redirect_from:
+  - /pages/events.html
 description: Hello, my name is Maggie. I've been publishing books and zines in the small press 
   comics community since 2007. I co-founded 2dcloud, now I focus on my own books.
 cover:
@@ -18,17 +20,13 @@ blurbs:
     simmering with emotion. Magical feats of comics communication within these stories, beautiful 
     tricks of mark making expressing what cannot be said. <br />I really love this book, very much. 
     <br />&mdash; Lale Westvind, author of Grip published by Perfectly Acceptable Press
-events:
-  - Debuts at CXC (Cartoon Crossroads Columbus), 2024
-  - '6/14-7/3/2024 <a href="https://www.annarborartcenter.org/drawing-worlds/" target="_blank">Drawing Worlds: The Art of Comics and Beyond</a>, A2AC Gallery, Ann Arbor, MI'
-  - 4/2/2024 artist Zoom talk for Lale Westvind's Print Class at Parsons School of Design, New York, NY
-  - "3/12/20 Now #8 Fantagraphics reading/signing with Amy Lockeart, Quimby&#39;s, Chicago, IL"
-  - 10/1/16 reading/slide show presentation of The Shirley Jackson Project, Boneshaker Books, Minneapolis, MN
 doubles:
   - path: /assets/images/blog/2024-07-16-cutw-production-sample-1.jpg
     alt: maggie umber reading a copy of Chrysanthemum Under the Waves by Maggie Umber
   - path: /assets/images/blog/2024-07-16-cutw-production-sample-4.jpg
     alt: maggie umber reading a copy of Chrysanthemum Under the Waves by Maggie Umber
+    events:
+  - 
 ---
 <p>{{ page.description }}</p>
 <p>
@@ -94,3 +92,55 @@ doubles:
 {% include blog-double.html %}
 <p>🖤</p>
 <p>{{ page.blurbs }}</p>
+
+<h2>Upcoming Events</h2>
+<h3>2024: The Less is More Zine Tour</h3>
+<ul>
+  <li>☞ 4/27 Madison Print & Resist Zine Fest, Madison, WI</li>
+  <li>☞ 6/14-7/7 Drawing Worlds: The art of comics and beyond, A2AC (The Ann Arbor Art Center), Ann Arbor, MI</li>
+  <li>☞ 6/15 ZND Fest (Zine Not Dead Fest: A Comics and Small Press Fair), Chicago, IL</li>
+  <li>☞ 6/30 oddball market, the Empty Bottle, Chicago, IL</li>
+  <li>☞ 8/17 <a href="https://autoptic.org/" target="_blank">Autoptic Festival</a>, Minneapolis, MN</li>
+  <li>☞ 8/18 <a href="https://www.ejoymehr.com/#inzf" target="_blank">INZF (Insert Name Zine Fest)</a>, Minneapolis, MN</li>
+  <li>☞ 8/24-25 <a href="https://www.cakechicago.com/" target="_blank">CAKE (Chicago Alternative Comics Expo)</a>, Chicago, IL</li>
+  <li>☞ 9/14-15 <a href="https://www.theurbanbirdingfestival.org/" target="_blank">The Urban Birding Festival</a>, Chicago, IL</li>
+  <li>☞ 9/26-29 <a href="https://www.cartooncrossroadscolumbus.org/" target="_blank">CXC (Cartoon Crossroads Columbus)</a>, Columbus, OH</li>
+</ul>
+
+<h3>2023: My Mostly Midwest Zine Tour</h3>
+<ul>
+  <li>
+    ☞ 4/8 ICE CREAM (Iowa City Expo for Comics and Real Eclectic
+    Alternative Media), Iowa City, IA
+  </li>
+  <li>☞ 4/22 Madison Print & Resist Zine Fest, Madison, WI</li>
+  <li>☞ 5/20 CZF (Chicago Zine Fest), Chicago, IL</li>
+  <li>☞ 6/3-6/4 CAKE (Chicago Alternative Comics Expo), Chicago, IL</li>
+  <li>
+    ☞ 6/23-6/26 The Zine Pavilion at ALA (American Library Association),
+    Chicago, IL
+  </li>
+  <li>☞ 8/12 INZF (Insert Name Zine Fest), Minneapolis, MN</li>
+  <li>☞ 8/27 ZINEmercado, Chicago, IL</li>
+  <li>☞ 9/9 Zinecinnati, Cincinnati, OH</li>
+  <li>
+    ☞ 9/10 MILK Comic Fest (Milwaukee Indie Local Comic Fest), Milwaukee,
+    WI
+  </li>
+  <li>☞ 9/16-9/17 CABF (Cincinnati Art Book Fair), Covington, KY</li>
+  <li>
+    ☞ 10/6 ZINE NOT DEAD #21, hosted by Chicago Printers Guild,
+    Co-prosperity, Chicago, IL
+  </li>
+  <li>
+    ☞ 10/7 Chicago Printer Guild PAPER JAM Co-prosperity, Chicago, IL
+    (screening The Schizophrenic Dialogues Short Film with Corrupted Frames: A
+    Digital Gallery)
+  </li>
+  <li>☞ 10/7 Lafayette Comic-Con, Lafayette, IN</li>
+  <li>☞ 10/14 Rain Taxi's Twin Cities Book Festival, St. Paul, MN</li>
+  <li>
+    ☞ 10/21 Chicago Printer Guilds PAPER JAM Publishers Fair,
+    Co-prosperity, Chicago, IL
+  </li>
+</ul>
