--- a/_pages/index.html
+++ b/_pages/index.html
@@ -3,6 +3,7 @@ title: Maggie Umber
 permalink: /
 redirect_from:
   - /pages/events.html
+  - /events.html
 description: Hello, my name is Maggie. I've been publishing books and zines in the small press 
   comics community since 2007. I co-founded 2dcloud, now I focus on my own books.
 cover:
