update events section

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -107,8 +107,9 @@ doubles:
   <li>☞ 9/14-15 <a href="https://www.theurbanbirdingfestival.org/" target="_blank">The Urban Birding Festival</a>, Chicago, IL</li>
   <li>☞ 9/26-29 <a href="https://www.cartooncrossroadscolumbus.org/" target="_blank">CXC (Cartoon Crossroads Columbus)</a>, Columbus, OH</li>
 </ul>
+<p>Check back soon for more tour dates!</p>
 
-<h3>2023: My Mostly Midwest Zine Tour</h3>
+<!-- <h3>2023: My Mostly Midwest Zine Tour</h3>
 <ul>
   <li>
     ☞ 4/8 ICE CREAM (Iowa City Expo for Comics and Real Eclectic
@@ -144,4 +145,4 @@ doubles:
     ☞ 10/21 Chicago Printer Guilds PAPER JAM Publishers Fair,
     Co-prosperity, Chicago, IL
   </li>
-</ul>
+</ul> -->
