shorten Lale's blurb on main page

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -14,11 +14,7 @@ button_id: SB5W5DNEJC7LS
 pages: 284 pgs, 6 in x 9 in
 materials: softcover, smythsewn
 blurbs:
-  - Feel the loudness of splatter and smudge. It howls and simmers. It is a pleasure to feel 
-    these images, you don’t read them, you feel them. Gaze into the dark pool, the surface of a 
-    well of subconscious, like a crystal ball, shadows of dream and memory cast onto the page 
-    with brooding inkiness and deep texture. Multiple styles of drawing here but all of them 
-    simmering with emotion. Magical feats of comics communication within these stories, beautiful 
+  - Magical feats of comics communication within these stories, beautiful 
     tricks of mark making expressing what cannot be said. <br />I really love this book, very much. 
     <br />&mdash; Lale Westvind, author of Grip published by Perfectly Acceptable Press
 doubles:
