rewrite intro to cutw

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -27,10 +27,14 @@ doubles:
 ---
 <p>{{ page.description }}</p>
 <p>
-  I'm excited to share my first self-published graphic novel with you! 6+ years in the making and 
-  topping off at nearly 300 pages, 
+  I'm excited to share my first self-published graphic novel with you! 6+ years in the making, 
   <a href="/chrysanthemum-under-the-waves.html">Chrysanthemum Under the Waves</a> is a collection
-  of nine comics. It's a book of mourning, a book of letting go, a book of love and loss.
+  of nine comics. It began as a single comic - a silent interpretation of the short story, The Tooth, 
+  by Shirley Jackson. In Jackson's writing, I met James Harris. His was an ominous but nearly invisible 
+  presence in her stories, a tall man in a blue suit, a face hidden under a hat or by cigar smoke... 
+  Once I invoked him in my comics, every aspect of my life began to fall away. At first, I thought 
+  that James Harris had come to destroy me. Over time, I recognized that the demon lover was there 
+  to help me say goodbye, goodbye to all I loved most in the world.
 </p>
 <!-- cover image -->
 <div class="gallery">
