rewrite cutw intro

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -27,14 +27,17 @@ doubles:
 ---
 <p>{{ page.description }}</p>
 <p>
-  I'm excited to share my first self-published graphic novel with you! 6+ years in the making, 
-  <a href="/chrysanthemum-under-the-waves.html">Chrysanthemum Under the Waves</a> is a collection
-  of nine comics. It began as a single comic - a silent interpretation of the short story, The Tooth, 
-  by Shirley Jackson. In Jackson's writing, I met James Harris. His was an ominous but nearly invisible 
-  presence in her stories, a tall man in a blue suit, a face hidden under a hat or by cigar smoke... 
-  Once I invoked him in my comics, every aspect of my life began to fall away. At first, I thought 
-  that James Harris had come to destroy me. Over time, I recognized that the demon lover was there 
-  to help me say goodbye, goodbye to all I loved most in the world.
+  I'm excited to share my first self-published graphic novel with you! 
+  <a href="/chrysanthemum-under-the-waves.html">Chrysanthemum Under the Waves</a> was 6+ years in the 
+  making and is a collection of 9 comics. It began as a single comic - a silent interpretation of 
+  the short story, The Tooth, by Shirley Jackson. 
+</p>
+<p>
+  In Jackson's writing, I met James Harris. His was an ominous but nearly invisible presence in her 
+  stories, a tall man in a blue suit, a face hidden under a hat or by cigar smoke... He was a demon
+  figure, a portent of doom. As he seeped into my comics, my marriage, my career and my health failed. 
+  At first, I thought that James Harris had come to destroy me. Over time, I recognized he was there 
+  to help me say goodbye to all I loved most.
 </p>
 <!-- cover image -->
 <div class="gallery">
