--- a/_pages/index.html
+++ b/_pages/index.html
@@ -33,10 +33,10 @@ doubles:
   the short story, The Tooth, by Shirley Jackson. 
 </p>
 <p>
-  In Jackson's writing, I met James Harris. His was an ominous but nearly invisible presence in her 
-  stories, a tall man in a blue suit, a face hidden under a hat or by cigar smoke... He was a demon
+  In Jackson's writing, I met James Harris. His is an ominous but nearly invisible presence in her 
+  stories, a tall man in a blue suit, a face hidden under a hat or by cigar smoke... He is a demon
   figure, a portent of doom. As he seeped into my comics, my marriage, my career and my health failed. 
-  At first, I thought that James Harris had come to destroy me. Over time, I recognized he was there 
+  At first, I thought that James Harris came to destroy me. Over time, I recognized he was there 
   to help me say goodbye to all I loved most.
 </p>
 <!-- cover image -->
