--- a/_pages/wholesale/wholesale-chrysanthemum-under-the-waves.html
+++ b/_pages/wholesale/wholesale-chrysanthemum-under-the-waves.html
@@ -4,7 +4,7 @@ permalink: /wholesale-chrysanthemum-under-the-waves
 cover:
   path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-cover.jpg
   alt: "a woman in profile with long hair floating up, text reads: Chrysanthemum Under the Waves"
-price: <s>Retail $35</s> <br />Wholesale $17.50 <br />PREORDER SHIPS 10/2024
+price: <s>Retail $35</s> <br />Wholesale $17.50 <br />On sale date Oct 22, 2024
 button_id: 5LFEPSPQT2VSJ
 pages: 284 pgs, 6 in x 9 in
 materials: softcover, smythsewn
