--- a/_pages/books/chrysanthemum-under-the-waves.html
+++ b/_pages/books/chrysanthemum-under-the-waves.html
@@ -7,7 +7,7 @@ redirect_from:
 cover:
   path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-cover.jpg
   alt: "a woman in profile with long hair floating up, text reads: Chrysanthemum Under the Waves"
-price: $35 PREORDER SHIPS 10/2024
+price: "$35 On sale date: Oct 22, 2024"
 button_id: SB5W5DNEJC7LS
 pages: 284 pgs, 6 in x 9 in
 materials: softcover, smythsewn
