--- a/_pages/index.html
+++ b/_pages/index.html
@@ -149,3 +149,10 @@ doubles:
     Co-prosperity, Chicago, IL
   </li>
 </ul> -->
+
+<!-- <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+  <input type="hidden" name="cmd" value="_s-xclick" />
+  <input type="hidden" name="hosted_button_id" value="5LFEPSPQT2VSJ" />
+  <input type="hidden" name="currency_code" value="USD" />
+  <input type="image" src="https://maggieumber.com/assets/buttons/paypal-preorder-button.png" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Add to Cart" />
+</form> -->
