--- a/_pages/index.html
+++ b/_pages/index.html
@@ -12,7 +12,7 @@ cover:
 price: "$35 PREORDER <br /> On sale date: Oct 22, 2024"
 button_id: SB5W5DNEJC7LS
 pages: 284 pgs, 6 in x 9 in
-materials: softcover, smythsewn
+materials: "softcover, smythsewn <br />ISBN: 979-8-218-41076-6"
 blurbs:
   - Magical feats of comics communication within these stories, beautiful 
     tricks of mark making expressing what cannot be said. <br />I really love this book, very much. 
