--- a/_pages/wholesale/wholesale-chrysanthemum-under-the-waves.html
+++ b/_pages/wholesale/wholesale-chrysanthemum-under-the-waves.html
@@ -7,7 +7,7 @@ cover:
 price: "<s>Retail $35</s> <br />Wholesale $17.50 PREORDER<br />On sale date: Oct 22, 2024"
 button_id: 5LFEPSPQT2VSJ
 pages: 284 pgs, 6 in x 9 in
-materials: softcover, smythsewn
+materials: "softcover, smythsewn <br />ISBN: 979-8-218-41076-6"
 images:
   - path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-01.jpg
     alt: female and male figures in a dark room, in front of a fireplace, with chrysanthemums on the mantel
