add bookstores list

--- a/_pages/books.html
+++ b/_pages/books.html
@@ -4,7 +4,9 @@ permalink: /books
 redirect_from: /pages/books.html
 description: Each of my zines is printed on demand using my Epson inkjet printer and folded 
   and stapled by hand. My graphic novels are printed offset and perfect bound by various 
-  printers overseas.  Anthologies are edited, printed and sold by their respective publishers.
+  printers overseas.  Anthologies are edited, printed and sold by their respective publishers. 
+  <br /> Want to support your local bookstore? <a href="#bookstores">
+    Here's bookstores that carry my books</a>.
 ---
 
 {% include page-description.html %}
@@ -17,3 +19,13 @@ description: Each of my zines is printed on demand using my Epson inkjet printer
   {% for item in site.data.anthologies %} {% include anthologies.html %} {%
     endfor %}
 </div>
+
+<h2 id="bookstores">Bookstores that carry my books:</h2>
+<ul>
+  <li><a href="https://floating-world-comics.myshopify.com/search?q=Maggie+Umber" target="_blank">☞ Floating World Comics</a>
+  Portland, OR</li>
+  <li><a href="https://copaceticcomics.com/creators/maggie-umber" target="_blank">☞ The Copacetic Comics Company</a>
+  Pittsburgh, PA</li>
+  <li><a href="https://www.beguilingbooks.com/browse/filter/t/Maggie%20Umber/k/keyword" target="_blank">☞ The Beguiling</a>, 
+  Toronto, ON</li>
+</ul>
