--- a/_pages/index.html
+++ b/_pages/index.html
@@ -4,8 +4,21 @@ permalink: /
 redirect_from:
   - /pages/events.html
   - /events.html
-description: Hello, my name is Maggie. I've been publishing books and zines in the small press 
-  comics community since 2007. I co-founded 2dcloud, now I focus on my own books.
+description: <p>Hello, my name is Maggie. I've been publishing books and zines in the small press 
+  comics community since 2007. I co-founded 2dcloud, now I focus on my own books.</p>
+  <p>
+    I'm excited to share my first self-published graphic novel with you! 
+    <a href="/chrysanthemum-under-the-waves.html">Chrysanthemum Under the Waves</a> was 6+ years in the 
+    making and is a collection of 9 comics. It began as a single comic - a silent interpretation of 
+    the short story, The Tooth, by Shirley Jackson. 
+  </p>
+  <p>
+    In Jackson's writing, I met James Harris. His is an ominous but nearly invisible presence in her 
+    stories, a tall man in a blue suit, a face hidden under a hat or by cigar smoke... He is a demon
+    figure, a portent of doom. As he seeped into my comics, my marriage, my career and my health failed. 
+    At first, I thought that James Harris came to destroy me. Over time, I recognized he was there 
+    to help me say goodbye to all I loved most.
+  </p>
 cover:
   path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-cover.jpg
   alt: "a woman in profile with long hair floating up, text reads: Chrysanthemum Under the Waves"
@@ -22,23 +35,9 @@ doubles:
     alt: maggie umber reading a copy of Chrysanthemum Under the Waves by Maggie Umber
   - path: /assets/images/blog/2024-07-16-cutw-production-sample-4.jpg
     alt: maggie umber reading a copy of Chrysanthemum Under the Waves by Maggie Umber
-    events:
-  - 
 ---
-<p>{{ page.description }}</p>
-<p>
-  I'm excited to share my first self-published graphic novel with you! 
-  <a href="/chrysanthemum-under-the-waves.html">Chrysanthemum Under the Waves</a> was 6+ years in the 
-  making and is a collection of 9 comics. It began as a single comic - a silent interpretation of 
-  the short story, The Tooth, by Shirley Jackson. 
-</p>
-<p>
-  In Jackson's writing, I met James Harris. His is an ominous but nearly invisible presence in her 
-  stories, a tall man in a blue suit, a face hidden under a hat or by cigar smoke... He is a demon
-  figure, a portent of doom. As he seeped into my comics, my marriage, my career and my health failed. 
-  At first, I thought that James Harris came to destroy me. Over time, I recognized he was there 
-  to help me say goodbye to all I loved most.
-</p>
+{{ page.description }}
+
 <!-- cover image -->
 <div class="gallery">
   <figure class="gallery-item">
