--- a/_pages/wholesale.html
+++ b/_pages/wholesale.html
@@ -4,14 +4,14 @@ permalink: /wholesale
 redirect_from: /pages/wholesale.html
 description: Hello retailers! Thank you for carrying my books in your shop. Any questions? Please 
   contact me via &#9997; <a href="mailto:paintedmags@proton.me" target="_blank">email</a>.
-  <li>☞ To qualify for wholesale - <br /> 
+  <li>☞ <em>To qualify for wholesale</em> - <br /> 
     you must order at least 10 copies. 
     10 copies of 1 title, or 10 <br />
-    copies spread out over multiple titles. If you do not meet these terms your order will be 
-    refunded, minus the paypal fee.</li>
+    copies spread out over multiple titles.</li>
   <li>☞ Shipping is free for wholesale orders placed in the USA!</li>
-  <li>☞ International wholesale orders will have shipping costs added after you've placed your order. 
+  <li>☞ International and outside the USA wholesale orders will have shipping costs added after you've placed your order. 
     <br /> I'll contact you directly with an invoice to cover the shipping.</li>
+  <li>☞ If you do not meet these terms your order will be refunded, minus the paypal fee.</li>
 ---
 
 {% include page-description.html %}
