add another bookstore

--- a/_pages/books.html
+++ b/_pages/books.html
@@ -26,6 +26,7 @@ description: Each of my zines is printed on demand using my Epson inkjet printer
   Portland, OR</li>
   <li><a href="https://copaceticcomics.com/creators/maggie-umber" target="_blank">☞ The Copacetic Comics Company</a>
   Pittsburgh, PA</li>
+  <li><a href="https://atomicbooks.com/search?type=product&q=Maggie+Umber" target="_blank">☞ Atomic Books</a>, Baltimore, MD</li>
   <li><a href="https://www.beguilingbooks.com/browse/filter/t/Maggie%20Umber/k/keyword" target="_blank">☞ The Beguiling</a>, 
   Toronto, ON</li>
 </ul>
