add yet another bookstore yayyyyy tho

--- a/_pages/books.html
+++ b/_pages/books.html
@@ -22,6 +22,8 @@ description: Each of my zines is printed on demand using my Epson inkjet printer
 
 <h2 id="bookstores">Bookstores that carry my books:</h2>
 <ul>
+  <li><a href="https://www.howlingpages.com/search?type=product&q=Maggie+Umber" target="_blank">☞ Howling Pages</a>, 
+  Chicago, IL</li>
   <li><a href="https://floating-world-comics.myshopify.com/search?q=Maggie+Umber" target="_blank">☞ Floating World Comics</a>
   Portland, OR</li>
   <li><a href="https://copaceticcomics.com/creators/maggie-umber" target="_blank">☞ The Copacetic Comics Company</a>
