add SLICE to events part 2

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -108,7 +108,7 @@ doubles:
   <li>☞ 8/24-25 <a href="https://www.cakechicago.com/" target="_blank">CAKE (Chicago Alternative Comics Expo)</a>, Chicago, IL</li>
   <li>☞ 9/14-15 <a href="https://www.theurbanbirdingfestival.org/" target="_blank">The Urban Birding Festival</a>, Chicago, IL</li>
   <li>☞ 9/26-29 <a href="https://www.cartooncrossroadscolumbus.org/" target="_blank">CXC (Cartoon Crossroads Columbus)</a>, Columbus, OH</li>
-  <li>☞ 10/26 <a href="https://www.slicexpo.org/" target="_blank">SLICE (St. Louis Independent Comics Expo)</a>, St. Louis, MS</li>
+  <li>☞ 10/26 <a href="https://www.slicexpo.org/" target="_blank">SLICE (St. Louis Independent Comics Expo)</a>, St. Louis, MO</li>
 </ul>
 <p>Check back soon for more tour dates!</p>
 
