--- a/_pages/index.html
+++ b/_pages/index.html
@@ -22,7 +22,7 @@ description: <p>Hello, my name is Maggie. I've been publishing books and zines i
 cover:
   path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-cover.jpg
   alt: "a woman in profile with long hair floating up, text reads: Chrysanthemum Under the Waves"
-price: "$35 PREORDER <br /> On sale date: Oct 22, 2024"
+price: "$35 PREORDER <br /> On sale: 10/22/24"
 button_id: SB5W5DNEJC7LS
 pages: 284 pgs, 6 in x 9 in
 materials: "softcover, smythsewn <br />ISBN: 979-8-218-41076-6"
