--- a/_pages/index.html
+++ b/_pages/index.html
@@ -110,6 +110,7 @@ doubles:
   <li>☞ 9/26-29 <a href="https://www.cartooncrossroadscolumbus.org/" target="_blank">CXC (Cartoon Crossroads Columbus)</a>, Columbus, OH</li>
   <li>☞ 10/5 <a href="https://aadl.org/a2cafsip" target="_blank">A2CAF: SIP (Ann Arbor Comic Arts Festival: Small + Indie Press)</a>, Ann Arbor, MI </li>
   <li>☞ 10/26 <a href="https://www.slicexpo.org/" target="_blank">SLICE (St. Louis Independent Comics Expo)</a>, St. Louis, MO</li>
+  <li>☞ 11/2 <a href="http://shortrun.org/" target="_blank">Short Run Comix Festival</a>, Seattle, WA</li>
 </ul>
 <p>Check back soon for more tour dates!</p>
 
