--- a/_pages/books.html
+++ b/_pages/books.html
@@ -2,7 +2,7 @@
 title: Books
 permalink: /books
 redirect_from: /pages/books.html
-description: Each of my zines is printed on demand using my Epson inkjet printer and folded 
+description: Each of my zines is printed on demand using my inkjet printer and folded 
   and stapled by hand. My graphic novels are printed offset and perfect bound by various 
   printers overseas.  Anthologies are edited, printed and sold by their respective publishers. 
   <br /> Want to support your local bookstore? <a href="#bookstores">
