--- a/_pages/books.html
+++ b/_pages/books.html
@@ -22,8 +22,12 @@ description: Each of my zines is printed on demand using my inkjet printer and f
 
 <h2 id="bookstores">Bookstores that carry my books:</h2>
 <ul>
+  <li><a href="https://chicagoliteraryhof.org/blog/entry/tangible-books-comes-to-bridgeport" target="_blank">☞ Tangible Books</a>,
+  Chicago, IL</li>
   <li><a href="https://www.howlingpages.com/search?type=product&q=Maggie+Umber" target="_blank">☞ Howling Pages</a>, 
   Chicago, IL</li>
+  <li><a href="https://www.vaultofmidnight.com/" target="_blank">☞ Vault of Midnight</a>,
+  Ann Arbor, MI</li>
   <li><a href="https://otherbooksla.com/search?q=Maggie+Umber" target="_blank">☞ Other Books LA</a>,
   Los Angeles, CA</li>
   <li><a href="https://floating-world-comics.myshopify.com/search?q=Maggie+Umber" target="_blank">☞ Floating World Comics</a>
