--- a/_pages/index.html
+++ b/_pages/index.html
@@ -109,6 +109,7 @@ doubles:
   <li>☞ 9/14-15 <a href="https://www.theurbanbirdingfestival.org/" target="_blank">The Urban Birding Festival</a>, Chicago, IL</li>
   <li>☞ 9/26-29 <a href="https://www.cartooncrossroadscolumbus.org/" target="_blank">CXC (Cartoon Crossroads Columbus)</a>, Columbus, OH</li>
   <li>☞ 10/5 <a href="https://aadl.org/a2cafsip" target="_blank">A2CAF: SIP (Ann Arbor Comic Arts Festival: Small + Indie Press)</a>, Ann Arbor, MI </li>
+  <li>☞ 10/25 <a href="https://chicagoliteraryhof.org/blog/entry/tangible-books-comes-to-bridgeport" target="_blank">Chrysanthemum Under the Waves Book Release Party @ Tangible Books</a>, Chicago, IL</li>
   <li>☞ 10/26 <a href="https://www.slicexpo.org/" target="_blank">SLICE (St. Louis Independent Comics Expo)</a>, St. Louis, MO</li>
   <li>☞ 11/2 <a href="http://shortrun.org/" target="_blank">Short Run Comix Festival</a>, Seattle, WA</li>
 </ul>
