update contact info

--- a/_pages/wholesale.html
+++ b/_pages/wholesale.html
@@ -3,7 +3,7 @@ title: Wholesale
 permalink: /wholesale
 redirect_from: /pages/wholesale.html
 description: Hello retailers! Thank you for carrying my books in your shop. Any questions? Please 
-  contact me via &#9997; <a href="mailto:paintedmags@proton.me" target="_blank">email</a>.
+  contact me via &#9997; <a href="mailto:paintedmags@proton.me" target="_blank">paintedmags [at] proton [dot] me</a>.
   <li>☞ <em>To qualify for wholesale</em> - <br /> 
     you must order at least 10 copies. 
     10 copies of 1 title, or 10 <br />
