add new event and podcast info

--- a/_pages/wholesale/wholesale-chrysanthemum-under-the-waves.html
+++ b/_pages/wholesale/wholesale-chrysanthemum-under-the-waves.html
@@ -53,7 +53,11 @@ blurbs:
     <br />&mdash; Lale Westvind, author of Grip published by Perfectly Acceptable Press
   - i think the style rine is in makes the elements of the house feel organic like its a shipwreck w urn corals & chandelier anemones growing & i love that <br />&mdash; lympho nodge
 events:
-  - Debuts at CXC (Cartoon Crossroads Columbus), 2024
+  - 10/25/2024 Chrysanthemum Under the Waves Book Release Party @ Tangible Books, Chicago, IL
+  - 9/26-9/29/2024 advanced copies at CXC (Cartoon Crossroads Columbus), 2024
+  - '8/9/2024 interview on the <a href="https://huuno.dmitrysamarov.com/podcast/maggie-umber/" target="_blank">hu u no podcast.
+    Click here to listen to the episode.</a> Artist and writer Dmitry Samarov and I talk about Chrysanthemum Under the Waves, 
+    self-publishing vs working with a publisher, my history as an cartoonist and why I left 2dcloud.'
   - '6/14-7/3/2024 <a href="https://www.annarborartcenter.org/drawing-worlds/" target="_blank">Drawing Worlds: The Art of Comics and Beyond</a>, A2AC Gallery, Ann Arbor, MI'
   - 4/2/2024 artist Zoom talk for Lale Westvind's Print Class at Parsons School of Design, New York, NY
   - "3/12/20 Now #8 Fantagraphics reading/signing with Amy Lockeart, Quimby&#39;s, Chicago, IL"
