--- a/_pages/index.html
+++ b/_pages/index.html
@@ -86,11 +86,22 @@ doubles:
   </figure>
 </div>
 
-
 <p>
-  You can <a href="/chrysanthemum-under-the-waves.html">preorder</a> now. Advanced copies will be 
+  I was interviewed on the <a href="https://huuno.dmitrysamarov.com/podcast/maggie-umber/" target="_blank">hu u no podcast.
+  Click here to listen to the episode.</a> Artist and writer Dmitry Samarov and I talk about Chrysanthemum Under the Waves, 
+  self-publishing vs working with a publisher, my history as an cartoonist and why I left 2dcloud.
+</p>
+<p>
+  You can <a href="/chrysanthemum-under-the-waves.html">preorder</a> now. Preorders will ship in early October,
+  to arrive by October 22, 2024.
+</p>
+<p>
+  Advanced copies will also be 
   available at <a href="https://www.cartooncrossroadscolumbus.org/" target="_blank">CXC (Cartoon Crossroads Columbus)</a>
   9/26-9/29/2024 and on the fall leg of my Less is More Zine Tour.
+</p>
+<p>
+  The book release party will be held at <a href="https://chicagoliteraryhof.org/blog/entry/tangible-books-comes-to-bridgeport" target="_blank">Tangible Books</a> in Chicago on 10/25/2024.
 </p>
 {% include blog-double.html %}
 <p>🖤</p>
